--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:3.12.4'
     // https://mvnrepository.com/artifact/javax.servlet/servlet-api
     compileOnly 'javax.servlet:servlet-api:2.5'
+    // https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server
+    implementation 'org.eclipse.jetty:jetty-server:9.4.54.v20240208'
 }
 
 test {
